--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-simple pathfinding by Chili-Turtle https://github.com/Chili-Turtle/Godot-simple-a_star-pathfinding/new/master
+Simple pathfinding exambple
+Chili-Turtle https://github.com/Chili-Turtle/Godot-simple-a_star-pathfinding/new/master
