--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-Simple pathfinding exambple
+Simple pathfinding example
 Chili-Turtle https://github.com/Chili-Turtle/Godot-simple-a_star-pathfinding/new/master
